<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="Options d'Affichage">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/switch_titre"
            app:summary="@string/switch_summary"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="Options de Dossiers">

    </PreferenceCategory>

    <EditTextPreference
        android:defaultValue="@string/path_directory_default"
        android:key="@string/sp_directory_path"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/text_path"
        />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/wanted_directories"
        android:entryValues="@array/wanted_directories"
        android:key="list_preference_1"
        android:title="List preference" />


</PreferenceScreen>